update calendar.controller.ts, calendar.routes.ts and swagger.json
